[tool.poetry]
name = "repl_python3_Blockchain-Explorer"
version = "0.1.0"
description = ""
authors = ["marcodellarosa9 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bitcoin = "^1.1.42"
bit = "^0.8.0"
base58 = "^2.1.1"
ecdsa = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
